--- a/add-product.html
+++ b/add-product.html
@@ -9,8 +9,8 @@
     />
     <meta name="description" content="" />
     <meta name="author" content="" />
-    <title>Movie Information Form with Dropzone</title>
-    <link href="css/styles.css" rel="stylesheet" />
+    <title>Add movies</title>
+
     <script
       src="https://use.fontawesome.com/releases/v6.3.0/js/all.js"
       crossorigin="anonymous"
@@ -25,8 +25,25 @@
     />
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.2.7/pdfmake.min.js"></script>
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.2.7/vfs_fonts.js"></script>
+
     <script src="https://cdn.datatables.net/v/dt/jszip-3.10.1/dt-1.13.8/af-2.6.0/b-2.4.2/b-colvis-2.4.2/b-html5-2.4.2/b-print-2.4.2/cr-1.7.0/date-1.5.1/fc-4.3.0/fh-3.4.0/kt-2.11.0/r-2.5.0/rg-1.4.1/rr-1.4.1/sc-2.3.0/sb-1.6.0/sp-2.2.0/sl-1.7.0/sr-1.3.0/datatables.min.js"></script>
+    <link
+      rel="stylesheet"
+      href="https://unpkg.com/dropzone@5/dist/min/dropzone.min.css"
+      type="text/css"
+    />
+    <!-- Dropzone.js library -->
+    <script src="https://unpkg.com/dropzone@5/dist/min/dropzone.min.js"></script>
+
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+    />
+
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
     <style>
       /* Style for the "Browse Image" button */
       .browse-button {
@@ -62,7 +79,7 @@
         display: block;
         margin-bottom: 5px;
         color: #555;
-        text-align: left; /* Align labels to the left */
+        text-align: left;
       }
 
       input,
@@ -72,7 +89,7 @@
         box-sizing: border-box;
         margin-bottom: 10px;
         border: 1px solid #ccc;
-        border-radius: 5px; /* Rounded corners */
+        border-radius: 5px;
       }
 
       input[type="submit"] {
@@ -80,31 +97,55 @@
         color: #232634;
         cursor: pointer;
         border: none;
-        border-radius: 5px; /* Rounded corners */
+        border-radius: 5px;
         padding: 10px;
-        transition: transform 0.3s ease, box-shadow 0.3s ease; /* Add transitions for a smooth effect */
-        box-shadow: 0 4px 8px #99d1db; /* Add box shadow */
+        transition: transform 0.3s ease, box-shadow 0.3s ease;
+        box-shadow: 0 4px 8px #99d1db;
       }
 
       input[type="submit"]:hover {
         background-color: #85c1dc;
-        transform: scale(1.009); /* Scale up on hover */
-        box-shadow: 0 8px 16px #85c1dc; /* Increase box shadow on hover */
+        transform: scale(1.009);
+        box-shadow: 0 8px 16px #85c1dc;
+      }
+      /* Add custom CSS to create a dashed border for Dropzone */
+      .dropzone {
+        border: 2px dashed #007bff;
+        border-radius: 5px;
+        background-color: #f0f0f0;
       }
       h1.mt-4 {
         text-align: left;
-        margin-top: 0; /* Remove default margin for h1 */
+        margin-top: 0;
       }
-      /* Style for Dropzone container */
       #dropzone-container {
         margin-top: 10px;
+      }
+      /* Main Content Animation */
+      main {
+        animation: fadeIn 1s ease-in-out;
+      }
+
+      /* Footer Animation */
+      footer {
+        animation: fadeInUp 1s ease-in-out;
+      }
+
+      /* Sidebar Toggle Animation */
+      button#sidebarToggle {
+        animation: fadeInRight 1s ease-in-out;
+      }
+
+      /* Sidebar Animation */
+      nav.sb-sidenav {
+        animation: fadeInLeft 1s ease-in-out;
       }
     </style>
   </head>
   <body class="sb-nav-fixed">
     <nav class="sb-topnav navbar navbar-expand navbar-dark bg-dark">
       <!-- Navbar Brand-->
-      <a class="navbar-brand ps-3" href="index.html">Start Bootstrap</a>
+      <a class="navbar-brand ps-3" href="index.html">Movies</a>
       <!-- Sidebar Toggle-->
       <button
         class="btn btn-link btn-sm order-1 order-lg-0 me-4 me-lg-0"
@@ -113,46 +154,6 @@
       >
         <i class="fas fa-bars"></i>
       </button>
-      <!-- Navbar Search-->
-      <form
-        class="d-none d-md-inline-block form-inline ms-auto me-0 me-md-3 my-2 my-md-0"
-      >
-        <!-- <div class="input-group">
-          <input
-            class="form-control"
-            type="text"
-            placeholder="Search for..."
-            aria-label="Search for..."
-            aria-describedby="btnNavbarSearch"
-          />
-          <button class="btn btn-primary" id="btnNavbarSearch" type="button">
-            <i class="fas fa-search"></i>
-          </button>
-        </div> -->
-      </form>
-      <!-- Navbar-->
-      <ul class="navbar-nav ms-auto ms-md-0 me-3 me-lg-4">
-        <li class="nav-item dropdown">
-          <a
-            class="nav-link dropdown-toggle"
-            id="navbarDropdown"
-            href="#"
-            role="button"
-            data-bs-toggle="dropdown"
-            aria-expanded="false"
-            ><i class="fas fa-user fa-fw"></i
-          ></a>
-          <ul
-            class="dropdown-menu dropdown-menu-end"
-            aria-labelledby="navbarDropdown"
-          >
-            <li><a class="dropdown-item" href="#!">Settings</a></li>
-            <li><a class="dropdown-item" href="#!">Activity Log</a></li>
-            <li><hr class="dropdown-divider" /></li>
-            <li><a class="dropdown-item" href="#!">Logout</a></li>
-          </ul>
-        </li>
-      </ul>
     </nav>
     <div id="layoutSidenav">
       <div id="layoutSidenav_nav">
@@ -169,19 +170,28 @@
 
               <div class="sb-sidenav-menu-heading">Addons</div>
 
-              <a class="nav-link" href="tables.html">
+              <a class="nav-link" href="table.html">
                 <div class="sb-nav-link-icon"><i class="fas fa-table"></i></div>
                 Tables
               </a>
               <a class="nav-link" href="add-product.html">
-                <div class="sb-nav-link-icon"><i class="fas fa-table"></i></div>
+                <div class="sb-nav-link-icon">
+                  <i class="fa fa-plus-square" aria-hidden="true"></i>
+                </div>
                 Add product
+              </a>
+              <a class="nav-link" href="product-img.html">
+                <div class="sb-nav-link-icon">
+                  <i class="fa fa-window-maximize" aria-hidden="true"></i>
+                </div>
+                Product details
               </a>
             </div>
           </div>
+
           <div class="sb-sidenav-footer">
-            <div class="small">Logged in as:</div>
-            Start Bootstrap
+            <div class="small">Duc:Movies Storage</div>
+            <img src="rabbit.gif" alt="Icon" style="height: 2.5rem" />
           </div>
         </nav>
       </div>
@@ -198,7 +208,6 @@
               </li>
             </ol>
 
-            <!-- Your form container -->
             <form action="#" method="post">
               <table>
                 <tr>
@@ -349,57 +358,60 @@
               </table>
             </form>
 
-            <!-- Dropzone.js library -->
-            <script src="https://unpkg.com/dropzone@5/dist/min/dropzone.min.js"></script>
-
             <script>
-              // Customize your Dropzone configuration here
               Dropzone.options.myDropzone = {
-                url: "#", // Placeholder URL since we're not sending files to a server
-                maxFilesize: 5, // Set the maximum file size in megabytes
-                acceptedFiles: ".jpg, .jpeg, .png, .gif", // Specify accepted file types
-                addRemoveLinks: true, // Add remove links to uploaded files
+                url: "#",
+                maxFilesize: 5,
+                acceptedFiles: ".jpg, .jpeg, .png, .gif",
+                addRemoveLinks: true,
 
                 dictDefaultMessage:
                   "Drag and drop your image here or <br><p class='browse-button'>Browse Image</p>", // Set the initial custom label with HTML
 
                 success: function (file) {
-                  // Handle successful uploads
                   console.log("File uploaded:", file);
                 },
                 error: function (file, errorMessage) {
-                  // Handle upload errors
                   console.error(errorMessage);
                 },
                 removedfile: function (file) {
-                  // Handle file removal
                   console.log("File removed:", file);
                 },
               };
+              // Add this script for form submission
+              $(document).ready(function () {
+                $("form").submit(function (e) {
+                  e.preventDefault(); // Prevent the default form submission
+                  Swal.fire({
+                    title: "Success!",
+                    text: "Your movie information has been submitted successfully.",
+                    icon: "success",
+                    confirmButtonText: "OK",
+                  });
+
+                  $("form")[0].reset();
+                });
+              });
             </script>
           </div>
         </main>
-        <footer class="py-4 bg-light mt-auto">
+        <footer
+          class="py-4 bg-light mt-auto animate__animated animate__fadeInUp animate__delay-1s"
+        >
           <div class="container-fluid px-4">
             <div
               class="d-flex align-items-center justify-content-between small"
             >
-              <div class="text-muted">Copyright &copy; Your Website 2023</div>
-              <div>
-                <a href="#">Privacy Policy</a>
-                &middot;
-                <a href="#">Terms &amp; Conditions</a>
+              <div class="text-muted">
+                Copyright &copy; duc.t.cit21@eiu.edu.vn
               </div>
             </div>
           </div>
         </footer>
       </div>
     </div>
-    <link
-      rel="stylesheet"
-      href="https://unpkg.com/dropzone@5/dist/min/dropzone.min.css"
-      type="text/css"
-    />
+
+    <link href="css/styles.css" rel="stylesheet" />
     <script src="js/scripts.js"></script>
   </body>
 </html>
