--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
     <meta name="description" content="" />
     <meta name="author" content="" />
     <title>Dashboard</title>
-    <link href="css/styles.css" rel="stylesheet" />
     <script
       src="https://use.fontawesome.com/releases/v6.3.0/js/all.js"
       crossorigin="anonymous"
@@ -27,19 +26,23 @@
 
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <!--  -->
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+      crossorigin="anonymous"
+    ></script>
+    <!-- Animate -->
+
     <link
       rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
     />
 
-    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <style>
       .swiper-slide img {
         width: 100%;
         height: 100%;
-        object-fit: cover; /* or "contain" depending on your preference */
+        object-fit: cover;
       }
-      /* Customize navigation button styles */
       .swiper-button-next,
       .swiper-button-prev {
         font-size: 24px;
@@ -50,60 +53,41 @@
         outline: none;
         cursor: pointer;
       }
+      /* Main Content Animation */
+      main {
+        animation: fadeIn 1s ease-in-out;
+      }
+
+      /* Footer Animation */
+      footer {
+        animation: fadeInUp 1s ease-in-out;
+      }
+
+      /* Sidebar Toggle Animation */
+      button#sidebarToggle {
+        animation: fadeInRight 1s ease-in-out;
+      }
+
+      /* Sidebar Animation */
+      nav.sb-sidenav {
+        animation: fadeInLeft 1s ease-in-out;
+      }
     </style>
   </head>
   <body class="sb-nav-fixed">
-    <nav class="sb-topnav navbar navbar-expand navbar-dark bg-dark">
+    <nav
+      class="sb-topnav navbar navbar-expand navbar-dark bg-dark animate__animated animate__fadeInDown"
+    >
       <!-- Navbar Brand-->
-      <a class="navbar-brand ps-3" href="index.html">Start Bootstrap</a>
+      <a class="navbar-brand ps-3" href="index.html">Movies</a>
       <!-- Sidebar Toggle-->
       <button
-        class="btn btn-link btn-sm order-1 order-lg-0 me-4 me-lg-0"
+        class="btn btn-link btn-sm order-1 order-lg-0 me-4 me-lg-0 animate__animated animate__fadeInRight"
         id="sidebarToggle"
         href="#!"
       >
         <i class="fas fa-bars"></i>
       </button>
-      <!-- Navbar Search-->
-      <form
-        class="d-none d-md-inline-block form-inline ms-auto me-0 me-md-3 my-2 my-md-0"
-      >
-        <!-- <div class="input-group">
-          <input
-            class="form-control"
-            type="text"
-            placeholder="Search for..."
-            aria-label="Search for..."
-            aria-describedby="btnNavbarSearch"
-          />
-          <button class="btn btn-primary" id="btnNavbarSearch" type="button">
-            <i class="fas fa-search"></i>
-          </button>
-        </div> -->
-      </form>
-      <!-- Navbar-->
-      <ul class="navbar-nav ms-auto ms-md-0 me-3 me-lg-4">
-        <li class="nav-item dropdown">
-          <a
-            class="nav-link dropdown-toggle"
-            id="navbarDropdown"
-            href="#"
-            role="button"
-            data-bs-toggle="dropdown"
-            aria-expanded="false"
-            ><i class="fas fa-user fa-fw"></i
-          ></a>
-          <ul
-            class="dropdown-menu dropdown-menu-end"
-            aria-labelledby="navbarDropdown"
-          >
-            <li><a class="dropdown-item" href="#!">Settings</a></li>
-            <li><a class="dropdown-item" href="#!">Activity Log</a></li>
-            <li><hr class="dropdown-divider" /></li>
-            <li><a class="dropdown-item" href="#!">Logout</a></li>
-          </ul>
-        </li>
-      </ul>
     </nav>
     <div id="layoutSidenav">
       <div id="layoutSidenav_nav">
@@ -119,19 +103,27 @@
               </a>
 
               <div class="sb-sidenav-menu-heading">Addons</div>
-              <a class="nav-link" href="tables.html">
+              <a class="nav-link" href="table.html">
                 <div class="sb-nav-link-icon"><i class="fas fa-table"></i></div>
                 Tables
               </a>
               <a class="nav-link" href="add-product.html">
-                <div class="sb-nav-link-icon"><i class="fas fa-table"></i></div>
+                <div class="sb-nav-link-icon">
+                  <i class="fa fa-plus-square" aria-hidden="true"></i>
+                </div>
                 Add product
+              </a>
+              <a class="nav-link" href="product-img.html">
+                <div class="sb-nav-link-icon">
+                  <i class="fa fa-window-maximize" aria-hidden="true"></i>
+                </div>
+                Product details
               </a>
             </div>
           </div>
           <div class="sb-sidenav-footer">
-            <div class="small">Logged in as:</div>
-            Start Bootstrap
+            <div class="small">Duc:Movies Storage</div>
+            <img src="rabbit.gif" alt="Icon" style="height: 2.5rem" />
           </div>
         </nav>
       </div>
@@ -182,10 +174,10 @@
                     el: ".swiper-pagination",
                     clickable: true,
                   },
-                  loop: true, // Enable continuous loop
+                  loop: true,
                   autoplay: {
-                    delay: 1800, // Autoplay delay in milliseconds
-                    disableOnInteraction: false, // Continue autoplay after user interaction
+                    delay: 1800,
+                    disableOnInteraction: false,
                   },
                   slidesPerView: 1,
                   spaceBetween: 10,
@@ -202,30 +194,22 @@
             </div>
           </div>
         </main>
-        <footer class="py-4 bg-light mt-auto">
+        <footer
+          class="py-4 bg-light mt-auto animate__animated animate__fadeInUp"
+        >
           <div class="container-fluid px-4">
             <div
               class="d-flex align-items-center justify-content-between small"
             >
-              <div class="text-muted">Copyright &copy; Your Website 2023</div>
-              <div>
-                <a href="#">Privacy Policy</a>
-                &middot;
-                <a href="#">Terms &amp; Conditions</a>
+              <div class="text-muted">
+                Copyright &copy; duc.t.cit21@eiu.edu.vn
               </div>
             </div>
           </div>
         </footer>
       </div>
     </div>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
-      crossorigin="anonymous"
-    ></script>
     <script src="js/scripts.js"></script>
-
-    <!-- Table -->
-    <!-- <link href="jquery.dataTables.min.css" rel="stylesheet" />
-    <script src="jquery.dataTables.min.js"></script> -->
+    <link href="css/styles.css" rel="stylesheet" />
   </body>
 </html>
